--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+/bin/
+/bin/target/
 
 ### STS ###
 .apt_generated
@@ -30,3 +32,5 @@ build/
 
 ### VS Code ###
 .vscode/
+/bin/
+/bin/target/
